--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
+    "@openzeppelin/contracts": "^4.7.0",
+    "@truffle/hdwallet-provider": "^2.0.10",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.5",
     "babel-polyfill": "6.26.0",
@@ -37,11 +39,10 @@
     "superstatic": "6.0.3",
     "truffle": "5.0.2",
     "truffle-hdwallet-provider": "1.0.2",
-    "web3": "1.0.0-beta.37",
+    "web3": "1.5.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "3.1.14",
     "webpack-node-externals": "1.7.2"
-  },
-  "dependencies": {}
+  }
 }
